添加ajax，未完成全部功能

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<ul class="mui-table-view">
 				<li class="lis">
 					<a href="javascript:;">
-						<p class="mui-media-object mui-pull-left ls" style="background:url(img/tu1.png)no-repeat center"></p>
+						<p class="mui-media-object mui-pull-left ls"><img src="img/tu1.png" /></p>
 						<p class="mui-media-body rs">
 							<span>零度</span>
 							<i>畅想了黑夜，知识安东想着</i>
@@ -42,7 +42,7 @@
 							</a>
 						</li>
 						<li class="comment">
-							<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
+							<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span class="num">8</span></p>
 							<p class="p2"><i id="btn2"><img src="img/state-comment.svg"/></i>&nbsp;&nbsp;<span>评论</span></p>
 						</li>
 						<li>
@@ -72,7 +72,7 @@
 			<ul class="mui-table-view"  id="com">
 				<li class="lis">
 					<a href="javascript:;">
-						<p class="mui-media-object mui-pull-left ls" style="background:url(img/tu3.jpg)no-repeat center"></p>
+						<p class="mui-media-object mui-pull-left ls"><img src="img/tu3.jpg" /></p>
 						<p class="mui-media-body rs">
 							<span>小鱼</span>
 							<i>会呼吸的痛</i>
@@ -88,7 +88,7 @@
 							</a>
 						</li>
 						<li class="comment">
-							<p class="mui-pull-left"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
+							<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
 							<p class="p2">
 								<i><img src="img/state-comment.svg"/></i><span>&nbsp;&nbsp;评论</span>
 								<i id="delete" style="margin-left: 30px;"><img src="img/state-delete.svg"/></i>&nbsp;&nbsp;<span>删除</span>
@@ -104,7 +104,7 @@
 			<ul class="mui-table-view">
 				<li class="lis">
 					<a href="javascript:;">
-						<p class="mui-media-object mui-pull-left ls" style="background:url(img/tu5.jpg)no-repeat center"></p>
+						<p class="mui-media-object mui-pull-left ls"><img src="img/tu5.jpg" /></p>
 						<p class="mui-media-body rs">
 							<span>完美世界</span>
 							<i>爱情就是这样，结局</i>
@@ -120,7 +120,7 @@
 							</a>
 						</li>
 						<li class="comment">
-							<p class="mui-pull-left"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
+							<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
 							<p class="p2"><i><img src="img/state-comment.svg"/></i>&nbsp;&nbsp;<span>评论</span></p>
 							<p class="p3">1小时前</p>
 							<p class="p4"><span>秋香：</span>赞~~~</p>
@@ -133,18 +133,18 @@
 			<ul class="mui-table-view">
 				<li class="lis">
 					<a href="javascript:;">
-						<p class="mui-media-object mui-pull-left ls" style="background:url(img/tu1.png)no-repeat center"></p>
+						<p class="mui-media-object mui-pull-left ls" ><img src="img/tu1.png" /></p>
 						<p class="mui-media-body rs">
 							<span>甲壳虫</span>
 							<i>畅想了黑夜，知识安东想着超出了区域</i>
 						</p>
 					</a>
 					<ul>
-						<li class="reply-img">
+						<li class="reply-img imgs-list">
 							<img src="img/img1.jpg" />
 						</li>
 						<li class="comment">
-							<p class="mui-pull-left"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
+							<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
 							<p class="p2"><i><img src="img/state-comment.svg"/></i>&nbsp;&nbsp;<span>评论</span></p>
 							<p class="p3">1小时前</p>
 							<p class="p4"><span>秋香：</span>赞~~~</p>
@@ -157,19 +157,19 @@
 			<ul class="mui-table-view">
 				<li class="lis">
 					<a href="javascript:;">
-						<p class="mui-media-object mui-pull-left ls" style="background:url(img/tu1.png)no-repeat center"></p>
+						<p class="mui-media-object mui-pull-left ls"><img src="img/tu1.png" /></p>
 						<p class="mui-media-body rs">
 							<span>甲壳虫</span>
 							<i>畅想了黑夜，知识安东想着超出了区域</i>
 						</p>
 					</a>
 					<ul>
-						<li class="reply-img">
+						<li class="reply-img imgs-list">
 							<img src="img/img2.jpg" />
 							<img src="img/img3.jpg" />
 						</li>
 						<li class="comment">
-							<p class="mui-pull-left"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span >8</span></p>
+							<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span >8</span></p>
 							<p class="p2"><i><img src="img/state-comment.svg"/></i>&nbsp;&nbsp;<span>评论</span></p>
 							<p class="p3">1小时前</p>
 							<p class="p4"><span>秋香：</span>赞~~~</p>
@@ -182,20 +182,20 @@
 			<ul class="mui-table-view">
 				<li class="lis">
 					<a href="javascript:;">
-						<p class="mui-media-object mui-pull-left ls" style="background:url(img/tu1.png)no-repeat center"></p>
+						<p class="mui-media-object mui-pull-left ls"><img src="img/tu1.png" /></p>
 						<p class="mui-media-body rs">
 							<span>甲壳虫</span>
 							<i>畅想了黑夜，知识安东想着超出了区域</i>
 						</p>
 					</a>
 					<ul>
-						<li class="reply-img">
+						<li class="reply-img imgs-list">
 							<img src="img/img4.jpg" />
 							<img src="img/img5.jpg" />
 							<img src="img/img6.jpg" />
 						</li>
 						<li class="comment">
-							<p class="mui-pull-left"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
+							<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
 							<p class="p2"><i><img src="img/state-comment.svg"/></i>&nbsp;&nbsp;<span>评论</span></p>
 							<p class="p3">1小时前</p>
 							<p class="p4"><span>秋香：</span>赞~~~</p>
@@ -208,21 +208,21 @@
 			<ul class="mui-table-view">
 				<li class="lis">
 					<a href="javascript:;">
-						<p class="mui-media-object mui-pull-left ls" style="background:url(img/tu1.png)no-repeat center"></p>
+						<p class="mui-media-object mui-pull-left ls"><img src="img/tu1.png" /></p>
 						<p class="mui-media-body rs">
 							<span>甲壳虫</span>
 							<i>畅想了黑夜，知识安东想着超出了区域</i>
 						</p>
 					</a>
 					<ul>
-						<li class="reply-img">
+						<li class="reply-img imgs-list">
 							<img src="img/img01.jpg" />
 							<img src="img/img02.jpg" />
 							<img src="img/img03.jpg" />
 							<img src="img/img04.jpg" />
 						</li>
 						<li class="comment">
-							<p class="mui-pull-left"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span class="">8</span></p>
+							<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
 							<p class="p2"><i><img src="img/state-comment.svg"/></i>&nbsp;&nbsp;<span>评论</span></p>
 							<p class="p3">1小时前</p>
 							<p class="p4"><span>秋香：</span>赞~~~</p>
@@ -236,14 +236,14 @@
 		<ul class="mui-table-view">
 			<li class="lis">
 				<a href="javascript:;">
-					<p class="mui-media-object mui-pull-left ls" style="background:url(img/tu1.png)no-repeat center"></p>
+					<p class="mui-media-object mui-pull-left ls"><img src="img/tu1.png" /></p>
 					<p class="mui-media-body rs">
 						<span>甲壳虫</span>
 						<i>畅想了黑夜，知识安东想着超出了区域</i>
 					</p>
 				</a>
 				<ul>
-					<li class="reply-img">
+					<li class="reply-img imgs-list">
 						<img src="img/img4.jpg" />
 						<img src="img/img5.jpg" />
 						<img src="img/img6.jpg" />
@@ -252,7 +252,7 @@
 						<img src="img/img5.jpg" />
 					</li>
 					<li class="comment">
-						<p class="mui-pull-left"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span class="">8</span></p>
+						<p class="mui-pull-left good"><i><img src="img/state-thumbs-up.svg"/></i>&nbsp;&nbsp;<span>8</span></p>
 						<p class="p2"><i><img src="img/state-comment.svg"/></i><span>&nbsp;&nbsp;评论</span></p>
 						<p class="p3">1小时前</p>
 						<p class="p4"><span>秋香：</span>赞~~~</p>
